# SAAF-MFEM

./: CMakeLists.txt  README.md  whitman1.txt
Meshes/: WangRagusa2010.mesh  WangRagusaUnit.mesh  WangRagusaUnitPeriodic.mesh  oneD.mesh  oneD.py
broom2/: .gitignore  BroomConfig.hh.in
broom2/Meshes/: TP2.mesh  TP3.mesh  UnsQuad.0.mesh  WangRagusa2010.py  WangRagusaUnit.py  WangRagusaUnitPeriodic.py  oneD2.mesh  oneD2.py  periodic-square-2.mesh
broom2/TPL/: mfem-3.2-dev.tar.bz2  mfem-3.2.tar.bz2  mfem-3.3-dev.tar.bz2  mfem-3.3.tar.bz2  mfem-cd5e25ebb8.tar.bz2
broom2/TPL/mfem-3.2-dev/fem/: bilinearform.hpp  bilininteg.cpp  bilininteg.hpp
broom2/TPL/mfem-3.3-dev/fem/: bilininteg.cpp  bilininteg.hpp  gridfunc.hpp
broom2/TPL/mfem-3.3-dev/miniapps/electromagnetics/: cylinder-hex.mesh  cylinder-tet.mesh
broom2/buildScripts/: ParClangRogue.sh  QuickInstallBroomOMPMPI.sh  QuickInstallRogueBroomOMPMPI.sh  SerClangAl.sh  qiBroom.sh  qiBroomPar.sh  qiBroomRoguePar.sh  qiLib.sh  qiLibPar.sh  versions.sh
broom2/cmake/: PreventInSourceBuilds.cmake
broom2/src/: Broom.cpp  DSASolve.cpp  DiffBC.cpp  DirectSolve.cpp  Distortions.cc  Distortions.hh  GridFuncBroom.cpp  GridFuncBroom.hpp  HPDoubleOps.hh  MeshLoader.cc  MeshLoader.hh  ProblemSpecifications.cpp  ProblemSpecifications.hpp  Quadrature.cpp  Quadrature.hpp  Solve.cpp  Solve.hpp  Swiffer.cpp  SwifferProblems.cpp  SwifferProblems.hpp  diffSolve.cpp  moab.MMS  physics.cpp  reed_hill.cpp  sol_scatter.cpp  tryOptions.hh  weights.cpp  weights.hpp
broom2/src/LDFE Quadratures/: LDFE_2_2.txt  LDFE_2_6.txt  LDFE_4_2.txt  LDFE_4_4.txt  LDFE_6_2.txt  LDFE_6_4.txt  LDFE_6_6.txt  LDFE_6_8.txt  LDFE_8_2.txt
broom2/src/LS Quadratures/: LS_4.txt  To Do.rtf
broom2/src/LS Quadratures2/: S12_LS_from_ARDRA.txt  S2_LS_from_ARDRA.txt  S4_LS_from_ARDRA.txt  S6_LS_from_ARDRA.txt  S8_LS_from_ARDRA.txt
broom2/src/QR Quadratures/: QR_2_2.txt  QR_2_4.txt  QR_2_8.txt  QR_4_2.txt  QR_4_4.txt  QR_4_6.txt  QR_4_8.txt  QR_6_2.txt  QR_6_4.txt  QR_6_6.txt  QR_6_8.txt  QR_8_2.txt  QR_8_4.txt  QR_8_6.txt  QR_8_8.txt
buildScripts/: OmpIntel.sh  ParClangCab.sh  ParGCCCab.sh  QuickInstallBroomOMP.sh  QuickInstallLibOMP.sh  QuickInstallLibOMPMPI.sh  SerClang.sh  SerClangCab.sh  SerClangDbg.sh  SerGcc.sh
src/: CMakeLists.txt  DSASolve.hpp  HPDouble.hh  HPDoubleOps.cc  diffSolve.hpp  moab.WR  physics.hpp
src/LDFE Quadratures/: LDFE_2_4.txt  LDFE_2_8.txt  LDFE_4_6.txt  LDFE_4_8.txt  LDFE_8_4.txt  LDFE_8_6.txt  LDFE_8_8.txt
src/LS Quadratures/: LS_2.txt  LS_7.txt  LS_9.txt
src/LS Quadratures2/: S10_LS_from_ARDRA.txt
src/QR Quadratures/: QR_2_6.txt
